updated to latest speech API, updated dependencies in package.json, changed languages to include polish

--- a/js/public/index.html
+++ b/js/public/index.html
@@ -91,8 +91,10 @@ Copyright 2017 Google Inc.
   <div id="translation_box" class="box">
     <label for="language">Select language</label>
     <select id="language" name="language">
-      <option value="en">English (United States)</option>
-      <option value="es" selected="selected">Español (España)</option>
+      <option value="en" selected="selected">English (United States)</option>
+      <option value="fr">French (France)</option>
+      <option value="pl">Polish (Poland)</option>
+      <option value="es">Español (España)</option>
       <option value="pt">Português (Brasil)</option>
       <option value="de">Deutsch (Deutschland)</option>
       <option value="ja">日本語（日本）</option>
